<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/fields"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/username_field"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/usuariotv"
                android:text="@string/usuario_textview"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"/>

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/usuariotv"
                android:hint="@string/username_input_hint"
                android:layout_weight="70"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_field"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/password_textView"
                android:text="@string/password_textview"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"/>

            <EditText
                android:id="@+id/password_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/password_textView"
                android:hint="@string/password_input_hint"
                android:layout_weight="70"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/confirm_field"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/confirm_textView"
                android:text="@string/confirm_textview"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"/>

            <EditText
                android:id="@+id/confirm_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/confirm_textView"
                android:hint="@string/confirm_input_hint"
                android:layout_weight="70"/>

        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@+id/fields"
        android:layout_alignRight="@+id/fields" />


</RelativeLayout>
